[package]
name = "jati"
description = "A user-friendly parser library"
version = "0.0.1"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/broadinstitute/jati"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "2.6.0"
